--- a/index.html
+++ b/index.html
@@ -1,9 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Banner Promo</title>
-  Hola
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enlaces de Banners</title>
+    <style>
+        body {
+            font-size: 18px; /* Establece el tamaño de la fuente del cuerpo del texto */
+        }
+
+        .info-block {
+            background-color: #fff;
+            border-radius: 2px;
+            padding: 24px;
+            margin-top: 24px;
+        }
+
+        .info-block ul {
+            list-style-type: disc; /* Añade bullets a la lista */
+            padding-left: 20px; /* Añade un poco de espacio para los bullets */
+        }
+
+        .info-block li {
+            margin-bottom: 0.5rem;
+        }
+
+        .info-block a {
+            color: #007bff; /* Color de enlace predeterminado de Bootstrap */
+            text-decoration: none;
+        }
+
+        .info-block a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="info-block mt-4">
+        <h2>Banner 1 imagen:</h2>
+        <ul>
+            <li><a href="proporcional.html">Proporcional</a></li>
+            <li><a href="relleno-imagen.html">Relleno 100%</a></li>
+            <li><a href="versiones-img/versiones-img.html">Versiones de imágenes</a></li>
+        </ul>
+
+        <h2>Banner 2 imágenes:</h2>
+        <ul>
+            <li><a href="Banner 2 imgs/2imgs.html">Relleno 100%</a></li>
+            <li><a href="Banner 2 imgs/00-versiones-imgs/versiones-imgs.html">Versiones de imágenes</a></li>
+        </ul>
+    </div>
+
 </body>
 </html>
